2005-11-09  Chris Toshok  <toshok@ximian.com>

	* ConfigurationElement.cs: Add support for DefaultCollection
	attributes.

	* PropertyInformation.cs (PropertyInformation.Value): add case for
	IsDefaultCollection.

	* SectionGroupInfo.cs (SectionGroupInfo.ReadConfig): when we read
	a "type" attribute, make sure the cached System.Type is cleared.

2005-10-25  Chris Toshok  <toshok@ximian.com>

	* InfiniteTimeSpanConverter.cs: new implementation.

	* InfiniteIntConverter.cs: new implementation.

	* GenericEnumConverter.cs: new implementation.

	* Configuration.cs: we don't need to check with "is" after we use
	"as"..  just check for null-ness.

	* KeyValueConfigurationCollection.cs: GetElementKey should throw
	NRE if element == null.

	* CommaDelimitedStringCollection.cs: raise the correct exceptions
	in the read only case, and return null from ToString if there are
	0 elements.

2005-10-25  Chris Toshok  <toshok@ximian.com>

	* PositiveTimeSpanValidatorAttribute.cs: new implementation.

	* PositiveTimeSpanValidator.cs: new implementation.

2005-10-24  Chris Toshok  <toshok@ximian.com>

	* TimeSpanSecondsOrInfiniteConverter.cs: new implementation.

	* TypeNameConverter.cs: new implementation.

	* WhiteSpaceTrimStringConverter.cs: new implementation.

2005-10-24  Chris Toshok  <toshok@ximian.com>

	* AppSettingsSection.cs (DeserializeElement, SerializeSection):
	split the behavior based on if File == "".  If it is, we do the
	default.  otherwise we throw NIE.

	* ConnectionStringsSection.cs (DeserializeElement): we shouldn't
	need this, but we do until the IsDefaultCollection stuff is fixed.

	* ConfigurationElementCollection.cs
	(OnDeserializeUnrecognizedElement): for clearElementName, make
	sure we have no attributes.

	* ConnectionStringSettingsCollection.cs (get_Properties): for now
	just chain up to base.Properties.

	* ConfigurationElement.cs (ReflectProperties): do the default
	value/property type check in a more robust way, using
	Convert.ChangeType.
